# MOTABY-client

./: .gitignore  README.md  assessments.csv  assessments.json  export_meta.json  pyproject.toml  token.txt
.claude-flow/data/: pending-insights.jsonl
examples/: assessment_type_export.py  export_all.py  patient_export.py  summary.py
motaby_export/: assessments.json  export_meta.json
motaby_export/readouts/38d28212-8ee0-4c90-862d-ebdbbda6afbb/: readouts_20260609_101916.json
motaby_export/readouts/3b831ef6-88f8-4f83-bd66-7d2cc6e09d1a/: joint_df_features.csv  raw_coco_sequence.csv  raw_coco_sequence_precleaned.csv
motaby_export/readouts/5d3c656c-13ff-4005-889e-b67f6b840854/: joint_df_features.csv  raw_coco_sequence.csv  raw_coco_sequence_precleaned.csv
src/motaby/: __init__.py  _http.py  client.py  exceptions.py  models.py  pagination.py
src/motaby/endpoints/: assessments.py  batteries.py  patients.py
tests/: conftest.py  test_assessments.py  test_batteries.py  test_client.py  test_pagination.py  test_patients.py
