[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "motaby-client"
version = "0.1.0"
description = "Python client library for the MOTABY motor disorder assessment platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "pandas>=1.5",
    "pandas-stubs",
]

[project.urls]
Homepage = "https://github.com/ataxercise/motaby"
Documentation = "https://ataxercise.github.io/motaby"
Issues = "https://github.com/ataxercise/motaby/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/motaby"]

[tool.mypy]
python_version = "3.9"
strict = true
